# maycomb

./: .gitignore  README.md  maycomb.example.toml  pyproject.toml  requirements.txt
.claude/: launch.json
maycomb/: __init__.py  api_console.py  api_openai.py  app.py  cli.py  config.py  db.py  ids.py  sse.py  state.py  tokenizer.py  wire.py
maycomb/static/: console.css  console.html  console.js
scripts/: demo_client.py  selftest.py
tests/: conftest.py  test_api.py  test_ids.py  test_streaming.py  test_wire_unit.py
