[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maycomb"
version = "0.1.0"
description = "Maycomb - human-operated OpenAI-compatible LLM mockup server for agent harness testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tiktoken>=0.8",
    "jsonschema>=4.23",
]

[project.scripts]
maycomb = "maycomb.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "anyio>=4.4",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["maycomb*"]

[tool.setuptools.package-data]
maycomb = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
